[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/bomb_projectile.png" type="Texture" id=1]
[ext_resource path="res://assets/bomb_explosion-Sheet.png" type="Texture" id=2]
[ext_resource path="res://src/game/ship/Bomb.gd" type="Script" id=3]
[ext_resource path="res://src/game/module/AutoMoveModule.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/game/module/ImpactAttackModule.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sfx/bomb.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 3.16228

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ImpactZone/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ImpactZone/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ImpactZone/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ImpactZone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Audio/Explosion:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "explode"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("ImpactZone/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ImpactZone/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ImpactZone/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1.0, 10.0, 15.0, 48.0104, 56.0089, 64.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ImpactZone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Audio/Explosion:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Bomb" type="Area2D"]
script = ExtResource( 3 )

[node name="AutoMoveModule" parent="." instance=ExtResource( 4 )]
node_path = NodePath("..")
move_on_ready = true
duration = 0.75

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ImpactZone" type="Area2D" parent="."]

[node name="ImpactAttackModule" parent="ImpactZone" instance=ExtResource( 5 )]
impact_damage = 9
target_group = "enemy"
area_node_path = NodePath("..")
collision_node_path = NodePath("../CollisionShape2D")

[node name="Sprite" type="Sprite" parent="ImpactZone"]
visible = false
texture = ExtResource( 2 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactZone"]
shape = SubResource( 4 )
disabled = true

[node name="Audio" type="Node2D" parent="."]

[node name="Explosion" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/explode = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Bomb_area_entered"]
[connection signal="completed" from="AutoMoveModule" to="." method="_on_AutoMoveModule_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
